# python-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  t.py
src/: t.py
